--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     font-family: sans-serif;
 }
 #card #image{
-height: 15rem;
+    height: 15rem;
 }
 #card img{
     width: 30rem;
@@ -51,7 +51,6 @@ height: 15rem;
     display: flex;
     text-align: center;
     width: 20rem;
-    /* margin: 1rem; */
     color:#757992d0;
 }
 #plan{
@@ -111,15 +110,14 @@ height: 15rem;
     font-weight: 600;
     box-shadow: black;
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
-    transition-duration: 0.4s;
+    transition-duration: 0.5s;
 }
 #submit:hover{
     background-color:#f8feff;
     color: #666666;
     border: 0.1px solid rgb(151, 151, 151);
-    width: 18rem;
-    height: 4rem;
-    transition-duration: 0.5s;
+    scale: 1.1;
+    top: 5.3rem;
 }
 #cancel{
     position: relative;
